2005-07-14 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Util/LCBitVector.m:
    * Source/Util/LCPriorityQueue.m:
    Disable unit test.
    * Source/Search/LCPrefixQuery.m:
    * Headers/Search/LCPrefixQuery.h:
    New subclass of LCQuery.
    * Source/Search/TestPrefixQuery.m:
    Test for LCPrefixQuery.
    * Source/Search/LCBooleanQuery.m:
    Bug fixed.
    * Source/Search/LCFilteredTermEnum.m:
    * Source/Search/LCMultiTermQuery.m:
    * Source/Search/LCFuzzyQuery.m:
    * Source/Search/LCFuzzyTermEnum.m:
    * Source/Search/TestFuzzyQuery.m:
    New classes and tests.

2005-07-12 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Analysis/LCPerFieldAnalyzerWrapper.m:
    add -description.

2005-07-07 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Search/LCQuery.m: fix warning.

2005-07-06 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Search/LCQuery.m: update -combine:.
    * Source/Index/LCSegmentInfos.m: update version.

2005-07-05 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    Minor update.

2005-07-04 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    Implement some optimization.

2005-07-02 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Index/LCSegmentTermEnum.m:
    Fix problem for long document.

2005-07-01 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Index/LCCompoundFileReader.m:
    Fix false warning.
    * Source/Search/TestQueryTermVector.m:
    Fix warning.
    * All test units should work now.

2005-06-23 Yen-Ju Chen <yjchenx at gmail _dot_ com>
    * Source/Search/LCBooleanQuery.m
    * Source/Search/LCQuery.m
    * Source/Store/LCStopAnalyzer.m:
    Update to lastest Apache Lucene.

2005-06-18 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Headers/Store/LCFSIndexInput.h
    * Headers/Store/LCFSIndexOutput.h
    * Source/Store/LCFSIndexInput.m
    * Source/Store/LCFSIndexOutput.m:
    Prevent close NSFileHandle twice.
    * Source/Document/LCDateTools.m:
    Remove unit test for millisecond.