@@ -22,7 +22,6 @@ static NSString *FIELD = @"field";
 
 - (void) testFuzziness
 {
-	NSLog(@"testFuzziness");
 	LCRAMDirectory *directory = [[LCRAMDirectory alloc] init];
 	LCIndexWriter *writer = [[LCIndexWriter alloc] initWithDirectory: directory analyzer: [[LCWhitespaceAnalyzer alloc] init]
 															  create: YES];
@@ -44,195 +43,297 @@ static NSString *FIELD = @"field";
 												prefixLength: 0];
 	LCHits *hits = [searcher search: query];
 	UKIntsEqual(3, [hits count]);
-#if 0
-    FuzzyQuery query = new FuzzyQuery(new Term(FIELD, "aaaaa"), FuzzyQuery.defaultMinSimilarity, 0);   
-    Hits hits = searcher.search(query);
-    assertEquals(3, hits.length());
-    
-    // same with prefix
-    query = new FuzzyQuery(new Term("field", "aaaaa"), FuzzyQuery.defaultMinSimilarity, 1);   
-    hits = searcher.search(query);
-    assertEquals(3, hits.length());
-    query = new FuzzyQuery(new Term("field", "aaaaa"), FuzzyQuery.defaultMinSimilarity, 2);   
-    hits = searcher.search(query);
-    assertEquals(3, hits.length());
-    query = new FuzzyQuery(new Term("field", "aaaaa"), FuzzyQuery.defaultMinSimilarity, 3);   
-    hits = searcher.search(query);
-    assertEquals(3, hits.length());
-    query = new FuzzyQuery(new Term("field", "aaaaa"), FuzzyQuery.defaultMinSimilarity, 4);   
-    hits = searcher.search(query);
-    assertEquals(2, hits.length());
-    query = new FuzzyQuery(new Term("field", "aaaaa"), FuzzyQuery.defaultMinSimilarity, 5);   
-    hits = searcher.search(query);
-    assertEquals(1, hits.length());
-    query = new FuzzyQuery(new Term("field", "aaaaa"), FuzzyQuery.defaultMinSimilarity, 6);   
-    hits = searcher.search(query);
-    assertEquals(1, hits.length());
+	
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 1];
+	hits = [searcher search: query];
+	UKIntsEqual(3, [hits count]);
+	
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 2];
+	hits = [searcher search: query];
+	UKIntsEqual(3, [hits count]);
+	
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 3];
+	hits = [searcher search: query];
+	UKIntsEqual(3, [hits count]);
 
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 4];
+	hits = [searcher search: query];
+	UKIntsEqual(2, [hits count]);
+	
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 5];
+	hits = [searcher search: query];
+	UKIntsEqual(1, [hits count]);
+	
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 6];
+	hits = [searcher search: query];
+	UKIntsEqual(1, [hits count]);
+	
     // not similar enough:
-    query = new FuzzyQuery(new Term("field", "xxxxx"), FuzzyQuery.defaultMinSimilarity, 0);  	
-    hits = searcher.search(query);
-    assertEquals(0, hits.length());
-    query = new FuzzyQuery(new Term("field", "aaccc"), FuzzyQuery.defaultMinSimilarity, 0);   // edit distance to "aaaaa" = 3
-    hits = searcher.search(query);
-    assertEquals(0, hits.length());
+	t = [[LCTerm alloc] initWithField: FIELD text: @"xxxxx"];
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 0];
+	hits = [searcher search: query];
+	UKIntsEqual(0, [hits count]);
+	
+	t = [[LCTerm alloc] initWithField: FIELD text: @"aaccc"];
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 0];
+	hits = [searcher search: query];
+	UKIntsEqual(0, [hits count]);
 
     // query identical to a word in the index:
-    query = new FuzzyQuery(new Term("field", "aaaaa"), FuzzyQuery.defaultMinSimilarity, 0);   
-    hits = searcher.search(query);
-    assertEquals(3, hits.length());
-    assertEquals(hits.doc(0).get("field"), ("aaaaa"));
-    // default allows for up to two edits:
-    assertEquals(hits.doc(1).get("field"), ("aaaab"));
-    assertEquals(hits.doc(2).get("field"), ("aaabb"));
+	t = [[LCTerm alloc] initWithField: FIELD text: @"aaaaa"];
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 0];
+	hits = [searcher search: query];
+	UKIntsEqual(3, [hits count]);
+	UKStringsEqual([[hits document: 0] stringValue: FIELD], @"aaaaa");
+	UKStringsEqual([[hits document: 1] stringValue: FIELD], @"aaaab");
+	UKStringsEqual([[hits document: 2] stringValue: FIELD], @"aaabb");
 
     // query similar to a word in the index:
-    query = new FuzzyQuery(new Term("field", "aaaac"), FuzzyQuery.defaultMinSimilarity, 0);   
-    hits = searcher.search(query);
-    assertEquals(3, hits.length());
-    assertEquals(hits.doc(0).get("field"), ("aaaaa"));
-    assertEquals(hits.doc(1).get("field"), ("aaaab"));
-    assertEquals(hits.doc(2).get("field"), ("aaabb"));
-    
+	t = [[LCTerm alloc] initWithField: FIELD text: @"aaaac"];
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 0];
+	hits = [searcher search: query];
+	UKIntsEqual(3, [hits count]);
+	UKStringsEqual([[hits document: 0] stringValue: FIELD], @"aaaaa");
+	UKStringsEqual([[hits document: 1] stringValue: FIELD], @"aaaab");
+	UKStringsEqual([[hits document: 2] stringValue: FIELD], @"aaabb");
+	
     // now with prefix
-    query = new FuzzyQuery(new Term("field", "aaaac"), FuzzyQuery.defaultMinSimilarity, 1);   
-    hits = searcher.search(query);
-    assertEquals(3, hits.length());
-    assertEquals(hits.doc(0).get("field"), ("aaaaa"));
-    assertEquals(hits.doc(1).get("field"), ("aaaab"));
-    assertEquals(hits.doc(2).get("field"), ("aaabb"));
-    query = new FuzzyQuery(new Term("field", "aaaac"), FuzzyQuery.defaultMinSimilarity, 2);   
-    hits = searcher.search(query);
-    assertEquals(3, hits.length());
-    assertEquals(hits.doc(0).get("field"), ("aaaaa"));
-    assertEquals(hits.doc(1).get("field"), ("aaaab"));
-    assertEquals(hits.doc(2).get("field"), ("aaabb"));
-    query = new FuzzyQuery(new Term("field", "aaaac"), FuzzyQuery.defaultMinSimilarity, 3);   
-    hits = searcher.search(query);
-    assertEquals(3, hits.length());
-    assertEquals(hits.doc(0).get("field"), ("aaaaa"));
-    assertEquals(hits.doc(1).get("field"), ("aaaab"));
-    assertEquals(hits.doc(2).get("field"), ("aaabb"));
-    query = new FuzzyQuery(new Term("field", "aaaac"), FuzzyQuery.defaultMinSimilarity, 4);   
-    hits = searcher.search(query);
-    assertEquals(2, hits.length());
-    assertEquals(hits.doc(0).get("field"), ("aaaaa"));
-    assertEquals(hits.doc(1).get("field"), ("aaaab"));
-    query = new FuzzyQuery(new Term("field", "aaaac"), FuzzyQuery.defaultMinSimilarity, 5);   
-    hits = searcher.search(query);
-    assertEquals(0, hits.length());
-    
+	t = [[LCTerm alloc] initWithField: FIELD text: @"aaaac"];
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 1];
+	hits = [searcher search: query];
+	UKIntsEqual(3, [hits count]);
+	UKStringsEqual([[hits document: 0] stringValue: FIELD], @"aaaaa");
+	UKStringsEqual([[hits document: 1] stringValue: FIELD], @"aaaab");
+	UKStringsEqual([[hits document: 2] stringValue: FIELD], @"aaabb");
+	
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 2];
+	hits = [searcher search: query];
+	UKIntsEqual(3, [hits count]);
+	UKStringsEqual([[hits document: 0] stringValue: FIELD], @"aaaaa");
+	UKStringsEqual([[hits document: 1] stringValue: FIELD], @"aaaab");
+	UKStringsEqual([[hits document: 2] stringValue: FIELD], @"aaabb");
+	
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 3];
+	hits = [searcher search: query];
+	UKIntsEqual(3, [hits count]);
+	UKStringsEqual([[hits document: 0] stringValue: FIELD], @"aaaaa");
+	UKStringsEqual([[hits document: 1] stringValue: FIELD], @"aaaab");
+	UKStringsEqual([[hits document: 2] stringValue: FIELD], @"aaabb");
+	
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 4];
+	hits = [searcher search: query];
+	UKIntsEqual(2, [hits count]);
+	UKStringsEqual([[hits document: 0] stringValue: FIELD], @"aaaaa");
+	UKStringsEqual([[hits document: 1] stringValue: FIELD], @"aaaab");
+	
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 5];
+	hits = [searcher search: query];
+	UKIntsEqual(0, [hits count]);
+	
+	t = [[LCTerm alloc] initWithField: FIELD text: @"ddddX"];
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 0];
+	hits = [searcher search: query];
+	UKIntsEqual(1, [hits count]);
+	UKStringsEqual([[hits document: 0] stringValue: FIELD], @"ddddd");
+	
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 1];
+	hits = [searcher search: query];
+	UKIntsEqual(1, [hits count]);
+	UKStringsEqual([[hits document: 0] stringValue: FIELD], @"ddddd");
 
-    query = new FuzzyQuery(new Term("field", "ddddX"), FuzzyQuery.defaultMinSimilarity, 0);   
-    hits = searcher.search(query);
-    assertEquals(1, hits.length());
-    assertEquals(hits.doc(0).get("field"), ("ddddd"));
-    
-    // now with prefix
-    query = new FuzzyQuery(new Term("field", "ddddX"), FuzzyQuery.defaultMinSimilarity, 1);   
-    hits = searcher.search(query);
-    assertEquals(1, hits.length());
-    assertEquals(hits.doc(0).get("field"), ("ddddd"));
-    query = new FuzzyQuery(new Term("field", "ddddX"), FuzzyQuery.defaultMinSimilarity, 2);   
-    hits = searcher.search(query);
-    assertEquals(1, hits.length());
-    assertEquals(hits.doc(0).get("field"), ("ddddd"));
-    query = new FuzzyQuery(new Term("field", "ddddX"), FuzzyQuery.defaultMinSimilarity, 3);   
-    hits = searcher.search(query);
-    assertEquals(1, hits.length());
-    assertEquals(hits.doc(0).get("field"), ("ddddd"));
-    query = new FuzzyQuery(new Term("field", "ddddX"), FuzzyQuery.defaultMinSimilarity, 4);   
-    hits = searcher.search(query);
-    assertEquals(1, hits.length());
-    assertEquals(hits.doc(0).get("field"), ("ddddd"));
-    query = new FuzzyQuery(new Term("field", "ddddX"), FuzzyQuery.defaultMinSimilarity, 5);   
-    hits = searcher.search(query);
-    assertEquals(0, hits.length());
-    
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 2];
+	hits = [searcher search: query];
+	UKIntsEqual(1, [hits count]);
+	UKStringsEqual([[hits document: 0] stringValue: FIELD], @"ddddd");
+	
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 3];
+	hits = [searcher search: query];
+	UKIntsEqual(1, [hits count]);
+	UKStringsEqual([[hits document: 0] stringValue: FIELD], @"ddddd");
 
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 4];
+	hits = [searcher search: query];
+	UKIntsEqual(1, [hits count]);
+	UKStringsEqual([[hits document: 0] stringValue: FIELD], @"ddddd");
+
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 5];
+	hits = [searcher search: query];
+	UKIntsEqual(0, [hits count]);
+	
     // different field = no match:
-    query = new FuzzyQuery(new Term("anotherfield", "ddddX"), FuzzyQuery.defaultMinSimilarity, 0);   
-    hits = searcher.search(query);
-    assertEquals(0, hits.length());
-#endif
+	t = [[LCTerm alloc] initWithField: @"anotherfield" text: @"ddddX"];
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 0];
+	hits = [searcher search: query];
+	UKIntsEqual(0, [hits count]);
+
 	[searcher close];
 	[directory close];
-	NSLog(@"testFuzziness done");
-
 }
 
-#if 0
-  public void testFuzzinessLong() throws Exception {
-    RAMDirectory directory = new RAMDirectory();
-    IndexWriter writer = new IndexWriter(directory, new WhitespaceAnalyzer(), true);
-    addDoc("aaaaaaa", writer);
-    addDoc("segment", writer);
-    writer.optimize();
-    writer.close();
-    IndexSearcher searcher = new IndexSearcher(directory);
-
-    FuzzyQuery query;
-    // not similar enough:
-    query = new FuzzyQuery(new Term("field", "xxxxx"), FuzzyQuery.defaultMinSimilarity, 0);   
-    Hits hits = searcher.search(query);
-    assertEquals(0, hits.length());
-    // edit distance to "aaaaaaa" = 3, this matches because the string is longer than
+- (void) testFuzzinessLong
+{	
+	LCRAMDirectory *directory = [[LCRAMDirectory alloc] init];
+	LCIndexWriter *writer = [[LCIndexWriter alloc] initWithDirectory: directory analyzer: [[LCWhitespaceAnalyzer alloc] init]
+															  create: YES];
+	[self addDoc: @"aaaaaaa" : writer];
+	[self addDoc: @"segment" : writer];
+	[writer optimize];
+	[writer close];
+	
+	
+	LCIndexSearcher *searcher = [[LCIndexSearcher alloc] initWithDirectory: directory];
+	
+	// not similar enough:
+	LCTerm *t = [[LCTerm alloc] initWithField: FIELD text: @"xxxxx"];
+	LCFuzzyQuery *query = [[LCFuzzyQuery alloc] initWithTerm: t
+										   minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+												prefixLength: 0];
+	LCHits *hits = [searcher search: query];
+	UKIntsEqual(0, [hits count]);
+	
+	// edit distance to "aaaaaaa" = 3, this matches because the string is longer than
     // in testDefaultFuzziness so a bigger difference is allowed:
-    query = new FuzzyQuery(new Term("field", "aaaaccc"), FuzzyQuery.defaultMinSimilarity, 0);   
-    hits = searcher.search(query);
-    assertEquals(1, hits.length());
-    assertEquals(hits.doc(0).get("field"), ("aaaaaaa"));
-    
-    // now with prefix
-    query = new FuzzyQuery(new Term("field", "aaaaccc"), FuzzyQuery.defaultMinSimilarity, 1);   
-    hits = searcher.search(query);
-    assertEquals(1, hits.length());
-    assertEquals(hits.doc(0).get("field"), ("aaaaaaa"));
-    query = new FuzzyQuery(new Term("field", "aaaaccc"), FuzzyQuery.defaultMinSimilarity, 4);   
-    hits = searcher.search(query);
-    assertEquals(1, hits.length());
-    assertEquals(hits.doc(0).get("field"), ("aaaaaaa"));
-    query = new FuzzyQuery(new Term("field", "aaaaccc"), FuzzyQuery.defaultMinSimilarity, 5);   
-    hits = searcher.search(query);
-    assertEquals(0, hits.length());
+	t = [[LCTerm alloc] initWithField: FIELD text: @"aaaaccc"];
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 0];
+	hits = [searcher search: query];
+	UKIntsEqual(1, [hits count]);
+	UKStringsEqual([[hits document: 0] stringValue: FIELD], @"aaaaaaa");
+
+	// now with prefix
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 1];
+	hits = [searcher search: query];
+	UKIntsEqual(1, [hits count]);
+	UKStringsEqual([[hits document: 0] stringValue: FIELD], @"aaaaaaa");
+
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 4];
+	hits = [searcher search: query];
+	UKIntsEqual(1, [hits count]);
+	UKStringsEqual([[hits document: 0] stringValue: FIELD], @"aaaaaaa");
+
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 5];
+	hits = [searcher search: query];
+	UKIntsEqual(0, [hits count]);	
 
     // no match, more than half of the characters is wrong:
-    query = new FuzzyQuery(new Term("field", "aaacccc"), FuzzyQuery.defaultMinSimilarity, 0);   
-    hits = searcher.search(query);
-    assertEquals(0, hits.length());
-    
+	t = [[LCTerm alloc] initWithField: FIELD text: @"aaaCccc"];
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 0];
+	hits = [searcher search: query];
+	UKIntsEqual(0, [hits count]);
+	
     // now with prefix
-    query = new FuzzyQuery(new Term("field", "aaacccc"), FuzzyQuery.defaultMinSimilarity, 2);   
-    hits = searcher.search(query);
-    assertEquals(0, hits.length());
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 2];
+	hits = [searcher search: query];
+	UKIntsEqual(0, [hits count]);
+	
+	// "student" and "stellent" are indeed similar to "segment" by default:
+	t = [[LCTerm alloc] initWithField: FIELD text: @"student"];
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 0];
+	hits = [searcher search: query];
+	UKIntsEqual(1, [hits count]);
+	
+	t = [[LCTerm alloc] initWithField: FIELD text: @"stellent"];
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 0];
+	hits = [searcher search: query];
+	UKIntsEqual(1, [hits count]);
 
-    // "student" and "stellent" are indeed similar to "segment" by default:
-    query = new FuzzyQuery(new Term("field", "student"), FuzzyQuery.defaultMinSimilarity, 0);   
-    hits = searcher.search(query);
-    assertEquals(1, hits.length());
-    query = new FuzzyQuery(new Term("field", "stellent"), FuzzyQuery.defaultMinSimilarity, 0);   
-    hits = searcher.search(query);
-    assertEquals(1, hits.length());
-    
-    // now with prefix
-    query = new FuzzyQuery(new Term("field", "student"), FuzzyQuery.defaultMinSimilarity, 1);   
-    hits = searcher.search(query);
-    assertEquals(1, hits.length());
-    query = new FuzzyQuery(new Term("field", "stellent"), FuzzyQuery.defaultMinSimilarity, 1);   
-    hits = searcher.search(query);
-    assertEquals(1, hits.length());
-    query = new FuzzyQuery(new Term("field", "student"), FuzzyQuery.defaultMinSimilarity, 2);   
-    hits = searcher.search(query);
-    assertEquals(0, hits.length());
-    query = new FuzzyQuery(new Term("field", "stellent"), FuzzyQuery.defaultMinSimilarity, 2);   
-    hits = searcher.search(query);
-    assertEquals(0, hits.length());
-    
-    // "student" doesn't match anymore thanks to increased minimum similarity:
-    query = new FuzzyQuery(new Term("field", "student"), 0.6f, 0);   
-    hits = searcher.search(query);
-    assertEquals(0, hits.length());
+	// now with prefix
+	t = [[LCTerm alloc] initWithField: FIELD text: @"student"];
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 1];
+	hits = [searcher search: query];
+	UKIntsEqual(1, [hits count]);
 
+	t = [[LCTerm alloc] initWithField: FIELD text: @"stellent"];
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 1];
+	hits = [searcher search: query];
+	UKIntsEqual(1, [hits count]);
+
+	t = [[LCTerm alloc] initWithField: FIELD text: @"student"];
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 2];
+	hits = [searcher search: query];
+	UKIntsEqual(0, [hits count]);
+
+	t = [[LCTerm alloc] initWithField: FIELD text: @"stellent"];
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: [LCFuzzyQuery defaultMinSimilarity]
+								  prefixLength: 2];
+	hits = [searcher search: query];
+	UKIntsEqual(0, [hits count]);
+	
+	// "student" doesn't match anymore thanks to increased minimum similarity:
+	t = [[LCTerm alloc] initWithField: FIELD text: @"student"];
+	query = [[LCFuzzyQuery alloc] initWithTerm: t
+							 minimumSimilarity: 0.6f
+								  prefixLength: 0];
+	hits = [searcher search: query];
+	UKIntsEqual(0, [hits count]);
+	
+#if 0
     try {
       query = new FuzzyQuery(new Term("field", "student"), 1.1f);
       fail("Expected IllegalArgumentException");
@@ -245,10 +346,9 @@ static NSString *FIELD = @"field";
     } catch (IllegalArgumentException e) {
       // expecting exception
     }
-
-    searcher.close();
-    directory.close();
-  }
 #endif
+	[searcher close];
+	[directory close];
+}
 
 @end
